# ptal-gtfs

./: .gitignore  .readthedocs.yaml  AGENTS.md  PLAN.md  README.md  mkdocs.yml  pyproject.toml
docs/: architecture.md  data.md  index.md  install.md  methodology.md  quickstart.md  requirements.txt
docs/reference/: gtfs.md  index.md  network.md  ptal.md  workflow.md
src/ptal_gtfs/: __init__.py  analysis.py  grid.py  network.py  ptal.py
src/ptal_gtfs/config/: __init__.py  schema.py
src/ptal_gtfs/config/profiles/: default.yaml  india.yaml
src/ptal_gtfs/io/: __init__.py  gtfs.py  osm.py
tests/: run_ptal_e2e.py  run_ptal_hull.py  test_analysis.py  test_config.py  test_grid.py  test_gtfs.py  test_network.py  test_osm.py  test_ptal.py
tests/fixtures/: boundary.geojson
tests/fixtures/mini_gtfs/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
